--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,10 @@
   "C_Cpp.default.configurationProvider": "vscode-wpilib",
   "wpilib.online": true,
   "files.associations": {
-    "*.inc": "cpp"
+    "*.inc": "cpp",
+    "algorithm": "cpp",
+    "bitset": "cpp",
+    "memory": "cpp",
+    "future": "cpp"
   }
 }
